fix: fix toast z-index

--- a/push-chain-frontend/src/styles/MyWins.css
+++ b/push-chain-frontend/src/styles/MyWins.css
@@ -264,7 +264,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 10000;
+  z-index: 999;
   backdrop-filter: blur(5px);
 }
 
